@@ -53,6 +53,7 @@ Version 1.9.1+svn:
  * Miscellaneous and bugfixes:
    * Changed: Lowered severity of some gui2 timer log messages.
    * Units created in debug mode now play their recruit animation (FR #16766)
+   * Fixed: properly update cmake revision numbers (bug #16483)
 
 Version 1.9.1:
  * AI:
